feat: REST API to delete dataset
