# schemas/openapi.yaml
@@ -226,6 +226,26 @@ paths:
       tags:
       - private
   /v1/datasets/{id}:
+    delete:
+      operationId: deleteDatasetById
+      parameters:
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: string
+      responses:
+        200:
+          description: Success
+        403:
+          description: Forbidden
+        404:
+          description: Dataset not found
+        422:
+          description: Dataset ID is invalid
+      summary: Delete dataset by ID
+      tags:
+      - datasets
     get:
       operationId: getDatasetById
       parameters:
